welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:40: error: not found: value doite
	doite()
        ^